--- a/index.html
+++ b/index.html
@@ -3,319 +3,202 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
+
 <style>
 * {box-sizing: border-box;}
 body {
   font-family: "Lato", sans-serif;
 }
-#head{
-overflow:hidden;
-margin-top:-1.5vh;
-margin-left:-10px;
-float:left;
-width:100%;
-
-background:#181818;
-padding:15px 15px 15px 15px;
-}
-#optional{
-float:left;
-}
 #popup{
-
-padding:0px 10px 0px 10px;
-float:right;
+margin-top:0.5vh;
 }
-
-#logo{
+#toolbar{
+margin-top:-7vh;
+margin-left:-10px;
+padding:15px 15px 15px 15px;
 float:left;
-margin-top:5px;
-margin-left:20px;
-padding:0px 20px 0px 20px;
-border:1px wheat solid;
+background:#181818;
+}
+.h-searcher{
+color:#000;
+font-size:24px;
+text-decoration:none;
+padding-top:3px;
+margin-left:0.4vw;
+margin-right:0.4vw;
+
+
+}
+#s-txt{
+font-weight:bolder;
+color:#181818;
+background:linear-gradient(-178.5deg,#ddd,#fff);
+border:none;
+border-radius:5vh 0px 0px 5vh;
+float:left;
+padding-left:2vh
+
+}
+#s-btn{
+color:#c5c5c5;
+background:linear-gradient(-170deg,#777,#111,#000);
+padding:2px 2vh;
+border-radius:0px 5vh 5vh 0px;
+border:none;
+float:left;
 }
 
-#head .search-container {
-  float: right;
- padding-top:5px;
- margin-right:15px;
- display:none;
+.icon-search i{
+ display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-#head input[type=text] {
-  padding: 5px 0px 5px 18px;
-  border:none;
-   border-radius:30px 0px 0px 30px;
-   font-size:30px;
-  background:linear-gradient(-178.5deg,#ddd,#fff);
+.icon-search i:before{
+content: "\f002";
 }
 
-#head .search-container button {
- 
-  float: right;
-  padding: 12px 20px 14px 20px;
-  color:f1f1f1;
-  background:linear-gradient(-170deg,#777,#111,#000);
-  cursor: pointer;
-  border:none;
-   border-radius:0px 30px 30px 0px;
-}
-#head .search-container button i{
-color:#c1c1c1;
-font-size:20px;
-}
 
-#head .search-container button:hover {
-  background:linear-gradient(-170deg,#888,#222,#080808);
-}
-#head #search-toggle{
-float:right;
-font-size:30px;
-padding:10px;
-}
-
-#head #account-a{
-float:right;
-padding:10px 0px;
-}
-
-#head a{
-padding-right:10px;
-color:#9e9e9e;
-font-size:30px;
-decoration:none;
+.h-items{
+color:#aaa;
+font-size:24px;
+text-decoration:none;
+margin-left:0.4vw;
+margin-right:0.4vw;
 cursor:pointer;
 transition:0.3s;
 }
-#head a:hover{
-color:#f1f1f1;
+.h-items:hover{
+color:#e5e5e5;
 }
 
-#head span{
-color:#c1c1c1;
-font-size:40px;
-cursor:pointer;
-
-border-radius:5px;
-transition: 0.3s;
+.set-Left{
+float:left;
 }
-#head span:hover{
-color:#f1f1f1;
+.set-Right{
+float:right;
 }
-
-.sidenav {
-  margin-top:70px;
-  position:fixed;
-  float:left;
-  height: 100%;
-  width: 0;
-  margin-left:-10px;
-  height:100%;
-  z-index: 1;
-  background-color: #181818;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 35px;
+.text{
+margin-top:0.8vh;
 }
+#logo{
+border:1px solid #fff;
+padding:0px 10px 0px 10px;
 
-.sidenav a {
-  padding-left:20px;
-  background:linear-gradient(90deg,#181818,#181818,#181818);
-  width:63%;
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-  border-radius:0px 50px 50px 0px;
 }
-
-.sidenav a:hover {
-  color: #222;
-  background:linear-gradient(90deg,#111,#777,#aaa);
-  border-radius:0px 50px 50px 0px;
-  
-}
-
-
-
-#main {
-  
-  transition: margin-left .5s;
-  padding: 16px;
-}
-#main .head{
-background:linear-gradient(90deg,#fff,wheat);
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
 </style>
 </head>
 <body onresize="sizeTester()" onload="sizeTester()">
-<div id="head" style="">
-<span id="optional" onclick="toggleNav()">&#9776;</span>
-<span id="logo">web Logo</span>
-<div id="account-a">
-<a>Log In</a>
-<a>Sing In</a>
+<div id="toolbar">
+ <span class="h-items set-Left" id="silde-switch" onClick="headerResize()">&#9776;</span>
+ <span class="h-items set-Left text" id="logo" onClick="headerResize()">Site Logo</span>
+ <span class="h-items set-Right" id="popup" onClick="headerResize()">&#8285;</span>
+ <span class="set-Right text" id="log">
+ <a class="h-items" href="#">Log In</a>
+ <a class="h-items" href="#">Sign In</a>
+ </span>
+<span class="icon-search h-items set-Right" onclick="searchOn()" id="mob-search" style="margin-top:0.8vh"><i></i></span>
+<div class="set-Right h-searcher text" id="searcher" style="">
+<form method="get" action="#">
+<input id="s-txt" type="text" placeholder="Search..."/>
+<button class="icon-search" id="s-btn" type="submit"><i></i></button>
+</form>
 </div>
-<span id="popup" onclick="">&#8285;</span>
-
-<div class="search-container" id="search-base">
-<input type="text" id="search-text" name="searchV" placeholder="seach">
-<button type="submit"><i class="fa fa-search" id="search-btn"></i></button>
 </div>
+<p id="demo">hello</p>
 
-<span id="search-toggle" onclick="displaySearch()"><i class="fa fa-search"></i></span>
-</div>
-
-<div id="mySidenav" class="sidenav">
-  
-  <a href="#">Newest</a>
-  <a href="#">Trending</a>
-  <a href="#">Free</a>
-  <a href="#">Premium</a>
-</div>
-
-<div id="main">
-  <div class="head"><h3 id="sizev"></h3></div>
- <p id="demo"></p>
-
-</div>
 <script>
-var nav=false;
+var h,w;
 
-function toggleNav(){
-if(nav){
-closeNav();
-
-
+function hRatio(){
+	return h/w;
 }
-else{
-openNav();
-
-}
+function wRatio(){
+	return w/h;
 }
 
-function openNav() {
-
-  document.getElementById("mySidenav").style.width = "230px";
-  document.getElementById("main").style.marginLeft = "230px";
-  nav=true;
-}
-
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-  document.getElementById("main").style.marginLeft= "0";
-  nav=false;
-}
-function hideSearch(){
-	document.getElementById("search-base").style.display = "none";
-	document.getElementById("search-toggle").style.display = "block";
-}
-function showSearch(){
-	document.getElementById("search-toggle").style.display = "none";
-	document.getElementById("search-base").style.display = "block";
-}
-function displaySearch(){
-document.getElementById("logo").style.display = "none";
-showSearch();
-}
-
-function wRatio(w,h){
-	var val=w/h;
-	return val;
-}
-function hRatio(w,h){
-	var val=h/w;
-	return val;
-}
 function sizeTester(){
-	var data="";
-	var w = window.innerWidth;
-	  var h = window.innerHeight;
-	  document.getElementById("logo").style.display = "block";
-	  wr=wRatio(w,h);
-	  hr=hRatio(w,h);
-	  data=wr+" width ratio<br/>"+hr+" height ratio<br/>"+w+" : "+h;
-	  if(wr>=1.5){
-		  var t=w-490;
-		  showSearch();
-		  document.getElementById("account-a").style.display = "block";
-		  document.getElementById("optional").style.display = "none";
-		  document.getElementById("popup").style.display = "none";
-		  openNav();
-}
-	 else if(wr>=0.8){
-		  var t=w-315;
-		  showSearch();
-		  document.getElementById("optional").style.display = "none";
-		  document.getElementById("popup").style.display = "block";
-		  document.getElementById("account-a").style.display = "none";
-		  
-		  openNav();
-	  }else if(wr<0.8){
-		var t=w-115;
-	  
-		  hideSearch();
-		  document.getElementById("optional").style.display = "block";
-		  document.getElementById("popup").style.display = "block";
-		  document.getElementById("account-a").style.display = "none";
-		  closeNav();
-		  }
-	  
-document.getElementById("search-base").style.width = t+"px";
-	  document.getElementById("search-text").style.width = t-80+"px";
-if(h>800){
-	document.getElementById("mySidenav").style.marginTop=(h/10-10)+"px";
-	document.getElementById("head").style.height=(h/13-10)+"px";
-	data=data+"<hr/>"+(h/13-10);
-	document.getElementById("logo").style.fontSize = "40px";
+	w = window.innerWidth;
+	h = window.innerHeight;	
+	var headerFont=h/20+"px";
+	var message=w+":"+h;
+	document.getElementById("logo").style.display="block";	
 	
-if(h>1000){
+	document.getElementById("toolbar").style.width=w+2+"px";
 	
-	var sizing=(h/10-60);
-	document.getElementById("search-text").style.fontSize = sizing-8+"px";
-	document.getElementById("search-btn").style.fontSize = sizing-15+"px";
-	document.getElementById("logo").style.fontSize = sizing+"px";
-	document.getElementById("optional").style.fontSize = sizing+"px";
-	document.getElementById("search-toggle").style.fontSize = sizing+"px";
-	document.getElementById("popup").style.fontSize = sizing+"px";
-	document.getElementById("account-a").style.fontSize = sizing+"px";
 	
-	var newSize=document.getElementById("search-base").style.width;
-	t=t-(h/15);
+	var hTags=document.getElementsByClassName("h-items");
+	hTags[0].style.fontSize=headerFont;
+	hTags[1].style.fontSize=headerFont;
+	hTags[2].style.fontSize=headerFont;
+	hTags[3].style.fontSize=headerFont;
+	hTags[4].style.fontSize=headerFont;
+	hTags[5].style.fontSize=headerFont;
+	document.getElementById("s-txt").style.fontSize=(h/20-4)+"px";
+	document.getElementById("s-btn").style.fontSize=(h/20-5)+"px";
+
+	document.getElementById("toolbar").style.paddingTop=(h/30)+"px";
+	document.getElementById("toolbar").style.paddingBottom=(h/30)+"px";
 	
-	data=data+"<hr>"+newSize+":"+t;
-	document.getElementById("search-base").style.width=t+"px";
-	document.getElementById("search-text").style.width = t-(h/12)+"px";
-	document.getElementById("head").style.paddingTop=(h/13-40)+"px";
-	document.getElementById("head").style.paddingBottom=(h/13-60)+"px";
-}else if(h<1100){
-	document.getElementById("head").style.paddingTop=(h/13-40)+"px";
-	var sizing=40;
-	document.getElementById("search-text").style.fontSize = sizing-8+"px";
-	document.getElementById("search-btn").style.fontSize = sizing-15+"px";
-	document.getElementById("logo").style.fontSize = sizing+"px";
-	document.getElementById("optional").style.fontSize = sizing+"px";
-	document.getElementById("search-toggle").style.fontSize = sizing+"px";
-	document.getElementById("popup").style.fontSize = sizing+"px";
-	document.getElementById("account-a").style.fontSize = sizing+"px";
-	document.getElementById("search-base").style.width = t+"px";
-	  document.getElementById("search-text").style.width = t-85+"px";
-}
-{
+	high=hRatio();
+	Wide=wRatio();
+	message=message+"<br>"+Wide;
 	
-}
+	var logoSize=(h/20*9)/2.13;
+	var logSize=(h/20*15)/2.13;
+	var popSize=(h/20*1)/2.13;
+	var opSize=(h/20*1)/2.13;
+	var fixedSize=w-70-(w/250);
+	var sWidth=0;
+	message=message+"<br>"+sWidth;
+
+	if(Wide>1.55){
+		
+		document.getElementById("popup").style.display="none";
+		document.getElementById("log").style.display="block";
+		document.getElementById("mob-search").style.display="none";
+		message=message+"<hr>"
+		sWidth=(fixedSize-logoSize-logSize);
+		document.getElementById("silde-switch").style.display="none";
+		
+		
+	}else if(Wide<1.55){
+		document.getElementById("popup").style.display="block";
+		document.getElementById("log").style.display="none";
+		//document.getElementById("log").style.display="block";
+		
+		if(Wide>0.85){
+			document.getElementById("silde-switch").style.display="none";
+			message=message+"<hr>"
+			document.getElementById("mob-search").style.display="none";
+			document.getElementById("searcher").style.display="block";
+			sWidth=(fixedSize-logoSize-popSize-25);
+		}else if(Wide<0.85){
+			sWidth=(fixedSize-opSize-popSize);	
+			document.getElementById("silde-switch").style.display="block";
+			document.getElementById("searcher").style.display="none";
+			document.getElementById("mob-search").style.display="block";
+		}
+	}
+	document.getElementById("searcher").style.width=sWidth+"px";
+	var buttonW=h/1000;
+	tWidth=(sWidth-h/20)-h/20-5;
+	document.getElementById("s-txt").style.width=tWidth+"px";
+	document.getElementById("demo").innerHTML=message;
+	document.getElementById("demo").style.fontSize=headerFont;
 }
 
-document.getElementById("demo").innerHTML=data;
+function searchOn(){
+	document.getElementById("searcher").style.display="block";
+	document.getElementById("mob-search").style.display="none";
+	document.getElementById("logo").style.display="none";
+}
+function headerResize(){
+	var wide=document.getElementById("log").style.width;
+	alert(wide);
 }
 </script>
    
