--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ float:left;
 padding-left:2vh
 
 }
+	
+#mob-search{
+padding-right:2vh;
+}
 #s-btn{
 color:#c5c5c5;
 background:linear-gradient(-170deg,#777,#111,#000);
