--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ and open the template in the editor.
             
         </div>
         <div class="home"></div>
-        <script src="js/jquery-3.4.1.js"></script>
-        <script src="js/main.js"></script>
+        <script src="Js/jquery-3.4.1.js"></script>
+        <script src="Js/main.js"></script>
     </body>
 </html>
