slide nav expand

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ and open the template in the editor.
         </nav>
         <button class="popup fa fa-user"></button>
         </nav>
-        <div class="slidenav">
+        <div class="slidenav" expand="false">
             <span>Price </span>
             <a href="#">Free</a>
             <a href="#">Paid</a>
