--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body onresize="resize()">
+    <body>
         <nav class="head">
             <Button class="slideToggle">&#9776;</Button>
         <span class="Pname"><a>Ailmax</a></span>
-        <nav class="options">
+        <nav class="options" display='none'>
             <nav class="popbase">
             <a class="fa fa-sign-in"><span>sign in</span></a>
             <a class="fa fa-user-circle-o"><span>sign up</span></a>
