--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ and open the template in the editor.
             <div class="carousel_container">
                 <div class="image">
                     <div id="picA" active="true" class="carousel_picture">
-                        <img src="Pic/Koding.png" style="width: 100%;">
+                        <img src="Pic/koding.png" style="width: 100%;">
                     </div>
                     <div id="picB" active="false" class="carousel_picture">
                         <img src="Pic/haudini.png" style="width: 100%">
