--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <link rel="stylesheet" href="css/theme.css" type="text/css">
@@ -57,7 +52,7 @@ and open the template in the editor.
             <div class="carousel_container">
                 <div class="image">
                     <div id="picA" active="true" class="carousel_picture">
-                        <img src="Pic/koding.png" style="width: 100%;">
+                        <img src="Pic/koding.png" style="width: 100%;height: 100%;">
                     </div>
                     <div id="picB" active="false" class="carousel_picture">
                         <img src="Pic/haudini.png" style="width: 100%">
@@ -70,6 +65,11 @@ and open the template in the editor.
                 <div class="fa arrows">
                     <span id="shiftL" class="fa-arrow-left"></span>
                     <span id="shiftR" class="fa-arrow-right"></span>
+                    <div class="dots">
+                        <span id="port3" class="circle" active="false"></span>
+                        <span id="port2" class="circle" active="false"></span>
+                        <span id="port1" class="circle" active="true"></span>
+                    </div>
                 </div>
                     <div id="textA" active="true" class="carousel_text">
                         <h1>Koding</h1>
@@ -89,7 +89,36 @@ and open the template in the editor.
             </div>
             </div>
             
-            <div style="width: 100%;height: 100px;background: #ff0;"></div>
+            <div class="horizontal-list" style="">
+                <h2>Latest</h2>
+                <div class="cards">
+                    <div class="card">
+                    <img src="Pic\Adobe illustrator.png">
+                    <h3>Adobe Illustrator cc2020</h3>
+                    <h4>$1500</h4>
+                    </div>
+                    <div class="card">
+                    <img src="Pic\CoralDraw.jpg">
+                    <h3>Coral Draw Graphic Suit 2019</h3>
+                    <h4>$1500</h4>
+                    </div>
+                    <div class="card">
+                        <img src="Pic\Gambas.png" style="margin:6px 0px;">
+                        <h3>Gambas<br> 3.14.2<br> 2019</h3>
+                    <h4>$1500</h4>
+                    </div>
+                    <div class="card">
+                    <img src="Pic\QuickHeal.png">
+                    <h3>Quick Heal Security simplified</h3>
+                    <h4>$1500</h4>
+                    </div>
+                    <div class="card">
+                    <img src="Pic\sap-logo.png">
+                    <h3>SAP HANA 2.0 SPS04 <br> Full</h3>
+                    <h4>$1500</h4>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="Js/jquery-3.4.1.js"></script>
         <script src="Js/main.js"></script>
