--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@ and open the template in the editor.
                 <div class="cards">
                     <div class="card">
                     <img src="Pic\Adobe illustrator.png">
-                    <h3>Adobe Illustrator cc2020</h3>
+                    <h3>Adobe<br> Illustrator<br> cc2020</h3>
                     <h4>$1500</h4>
                     </div>
                     <div class="card">
                     <img src="Pic\CoralDraw.jpg">
-                    <h3>Coral Draw Graphic Suit 2019</h3>
+                    <h3>Coral Draw<br> Graphic Suit<br> 2019</h3>
                     <h4>$1500</h4>
                     </div>
                     <div class="card">
@@ -114,12 +114,12 @@ and open the template in the editor.
                     </div>
                     <div class="card">
                     <img src="Pic\QuickHeal.png">
-                    <h3>Quick Heal Security simplified</h3>
+                    <h3>Quick Heal<br> Security <br>simplified</h3>
                     <h4>$1500</h4>
                     </div>
                     <div class="card">
                     <img src="Pic\sap-logo.png">
-                    <h3>SAP HANA 2.0 SPS04 <br> Full</h3>
+                    <h3>SAP HANA 2.0<br> SPS04 <br> Full</h3>
                     <h4>$1500</h4>
                     </div>
                 </div>
