--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ and open the template in the editor.
             <div class="carousel_container">
                 <div class="image">
                     <div id="picA" active="true" class="carousel_picture">
-                        <img src="Pic/koding.png" style="width: 100%;height: 100%;">
+                        <img src="Pic/koding.png" style="">
                     </div>
                     <div id="picB" active="false" class="carousel_picture">
-                        <img src="Pic/haudini.png" style="width: 100%">
+                        <img src="Pic/haudini.png" style="">
                     </div>
                     <div id="picC" active="false" class="carousel_picture">
-                         <img src="Pic/windows10.jpg" style="width: 100%">
+                         <img src="Pic/windows10.jpg" style="">
                     </div>
                 </div>
                 <div class="desc">
@@ -93,36 +93,39 @@ and open the template in the editor.
                     </div>
             </div>
             </div>
-            
+         
             <div class="horizontal-list" style="">
                 <h2>Latest</h2>
                 <div class="cards">
-                    <div class="card">
-                    <img src="Pic\Adobe illustrator.png">
-                    <h3>Adobe<br> Illustrator<br> cc2020</h3>
-                    <h4>$1500</h4>
+                    <div class="card cardA">
+                        <img src="Pic/Gambas.png" style="margin-bottom: 8px;">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
                     </div>
-                    <div class="card">
-                    <img src="Pic\CoralDraw.jpg">
-                    <h3>Coral Draw<br> Graphic Suit<br> 2019</h3>
-                    <h4>$1500</h4>
+                    <div class="card cardB">
+                        <img src="Pic/sap-logo.png">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
                     </div>
-                    <div class="card">
-                        <img src="Pic\Gambas.png" style="margin:6px 0px;">
-                        <h3>Gambas<br> 3.14.2<br> 2019</h3>
-                    <h4>$1500</h4>
+                    <div class="card cardC">
+                        <img src="Pic/QuickHeal.png">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
                     </div>
-                    <div class="card">
-                    <img src="Pic\QuickHeal.png">
-                    <h3>Quick Heal<br> Security <br>simplified</h3>
-                    <h4>$1500</h4>
+                    <div class="card cardD">
+                        <img src="Pic/CoralDraw.jpg">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
                     </div>
-                    <div class="card">
-                    <img src="Pic\sap-logo.png">
-                    <h3>SAP HANA 2.0<br> SPS04 <br> Full</h3>
-                    <h4>$1500</h4>
+                    <div class="card cardE">
+                        <img src="Pic/Adobe illustrator.png">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
                     </div>
                 </div>
+            </div>
+            <div class="horizontal-list">
+                <h2>Trending</h2>
             </div>
         </div>
         <script src="Js/jquery-3.4.1.js"></script>
