home page layout almost done

--- a/index.html
+++ b/index.html
@@ -125,8 +125,75 @@ and open the template in the editor.
                 </div>
             </div>
             <div class="horizontal-list">
-                <h2>Trending</h2>
+                <h2>Top Paid</h2>
+                <div class="cards">
+                    <div class="card cardA">
+                        <img src="Pic/MacOS.png" style="">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                    <div class="card cardB">
+                        <img src="Pic/Maya.jpg">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                    <div class="card cardC">
+                        <img src="Pic/Unity.jpg">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                    <div class="card cardD">
+                        <img src="Pic/Norton.jpg">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                    <div class="card cardE">
+                        <img src="Pic/VisualStudio.png">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                </div>
             </div>
+            <div class="horizontal-list">
+                <h2>Top Free</h2>
+                <div class="cards">
+                    <div class="card cardA">
+                        <img src="Pic/mysql.jpg" style="">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                    <div class="card cardB">
+                        <img src="Pic/Blender.jpg">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                    <div class="card cardC">
+                        <img src="Pic/zipBooks.png">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                    <div class="card cardD">
+                        <img src="Pic/avira.png">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                    <div class="card cardE">
+                        <img src="Pic/Android Studio.png" style="margin-bottom: -7px;">
+                        <h3>Product</h3>
+                        <h3>Price</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="fa">
+                    <a href="#" class="hidenable"><span class="fa-github-square"></span></a>
+                    <a href="#"><span class="fa-facebook-square"></span></a>
+                    <a href="#" class="hidenable"><span class="fa-paypal"></span></a>
+                    <a href="#"><span class="fa-skype"></span></a>
+                    <a href="#"><span class="fa-twitter-square"></span></a>
+                    <a href="#"><span class="fa-google-plus-square"></span></a>
+                </div>
+        </div>
         </div>
         <script src="Js/jquery-3.4.1.js"></script>
         <script src="Js/main.js"></script>
