--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ and open the template in the editor.
                         <h3>Price</h3>
                     </div>
                     <div class="card cardC">
-                        <img src="Pic/unity.jpg">
+                        <img src="Pic/Unity.jpg">
                         <h3>Product</h3>
                         <h3>Price</h3>
                     </div>
@@ -185,15 +185,24 @@ and open the template in the editor.
                 </div>
             </div>
             <div class="bottom">
+                <h3>Follow Us on:</h3>
                 <div class="fa">
-                    <a href="#" class="hidenable"><span class="fa-github-square"></span></a>
-                    <a href="#"><span class="fa-facebook-square"></span></a>
-                    <a href="#" class="hidenable"><span class="fa-paypal"></span></a>
-                    <a href="#"><span class="fa-skype"></span></a>
-                    <a href="#"><span class="fa-twitter-square"></span></a>
-                    <a href="#"><span class="fa-google-plus-square"></span></a>
+                    <a href="#" class="hidenable"><span class="fa-github" onColor="black"></span></a>
+                    <a href="#"><span class="fa-facebook" onColor="blue"></span></a>
+                    <a href="#" class="hidenable"><span class="fa-paypal" onColor="Dblue"></span></a>
+                    <a href="#"><span class="fa-skype" onColor="Lblue"></span></a>
+                    <a href="#"><span class="fa-twitter" onColor="cyan"></span></a>
+                    <a href="#"><span class="fa-google-plus" onColor="red"></span></a>
                 </div>
-        </div>
+                 <h3>Consumer Support</h3>
+                 <div class="text">
+                     <ul>
+                         <li> <a href="#">Contact Us</a></li>
+                         <li><a href="#">Transaction issue</a></li>
+                 <li><a href="#">Problem with Product/License</a></li>
+                     </ul>
+                 </div>
+                 </div>
         </div>
         <script src="Js/jquery-3.4.1.js"></script>
         <script src="Js/main.js"></script>
