--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ and open the template in the editor.
         <span class="Pname"><a href="#">Ailmax</a></span>
         <nav class="options" display='none'>
             <nav class="popbase">
-                <a href="#" class="fa fa-sign-in"><span style="">sign in</span></a>
-            <a href="#" class="fa fa-user-circle-o"><span>sign up</span></a>
+                <a href="ID.html?login" class="fa fa-sign-in"><span style="">sign in</span></a>
+            <a href="ID.html?register" class="fa fa-user-circle-o"><span>sign up</span></a>
             </nav>
         </nav>
         <button class="popup fa fa-user"></button>
@@ -138,7 +138,7 @@ and open the template in the editor.
                         <h3>Price</h3>
                     </div>
                     <div class="card cardC">
-                        <img src="Pic/unity.jpg">
+                        <img src="Pic/Unity.jpg">
                         <h3>Product</h3>
                         <h3>Price</h3>
                     </div>
