home page and ID page completed and responsive

--- a/ID.html
+++ b/ID.html
@@ -41,7 +41,7 @@ and open the template in the editor.
                     <input type="emil" name="email" placeholder="Your email"/><br>
                     <input type="password" name="Name" placeholder="Your Password"/><br>
                     <button type="submit">Create Account</button>
-                    <a href="ID.html?login"><b>Sign in</b></a>
+                    <a href="?login"><b>Sign in</b></a>
                     </form>
                 </div>
                 <br>
@@ -52,7 +52,7 @@ and open the template in the editor.
                     <input type="password" name="Name" placeholder="Your Password"/><br>
                     <button type="submit">Sign In</button>
                    
-                    <a href="ID.html?register"><b>Create new Account</b></a>
+                    <a href="?register"><b>Create new Account</b></a>
                 </form>
                 </div>
             </div>
