--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ and open the template in the editor.
                         <h3>Price</h3>
                     </div>
                     <div class="card cardC">
-                        <img src="Pic/unity.jpg">
+                        <img src="Pic/Unity.jpg">
                         <h3>Product</h3>
                         <h3>Price</h3>
                     </div>
