--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ app.controller('ControllA', function($scope) {
   $scope.paid = [
       {name:"MAC",          img:"Pic/MacOS.png",       price:"\u20B9"+"2 000"},
       {name:"Maya",         img:"Pic/Maya.jpg",        price:"\u20B9"+"11 000"},
-      {name:"Unity",        img:"Pic/unity.jpg",       price:"\u20B9"+"8 875"},
+      {name:"Unity",        img:"Pic/Unity.jpg",       price:"\u20B9"+"8 875"},
       {name:"Norton",       img:"Pic/Norton.jpg",      price:"\u20B9"+"3 500"},
       {name:"Visual Studio",img:"Pic/VisualStudio.png",price:"\u20B9"+"3 195"}
   ];
