--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div class="fa">
                     <a href="#" class="hidenable"><span class="fa-github" onColor="black"></span></a>
                     <a href="#"><span class="fa-facebook" onColor="blue"></span></a>
-                    <a href="#" class="hidenable"><span class="fa-paypal" onColor="Dblue"></span></a>
+                    <a href="#" class="hidenable"><span class="fa-paypal" onColor="cyan-blue"></span></a>
                     <a href="#"><span class="fa-skype" onColor="Lblue"></span></a>
                     <a href="#"><span class="fa-twitter" onColor="cyan"></span></a>
                     <a href="#"><span class="fa-google-plus" onColor="red"></span></a>
