--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
         <script>
 var app = angular.module('Home_pg', []);
 app.controller('ControllA', function($scope) {
+//start data
   $scope.offer = [
       {name:"Koding",    img:"Pic/koding.png",   data:"Now avilable in .msi extention"},
       {name:"Haudini",   img:"Pic/haudini.png",  data:"getting 20% discount on Licence"},
@@ -233,7 +234,7 @@ app.controller('ControllA', function($scope) {
       {name:"Avira",         img:"Pic/avira.png",         price:"Free"},
       {name:"Android Studio",img:"Pic/Android Studio.png",price:"Free"}
   ];
-  
+//start data  
 });
 </script>
     </body>
