--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ app.controller('ControllA', function($scope) {
       {name:"Avira",         img:"Pic/avira.png",         price:"Free"},
       {name:"Android Studio",img:"Pic/Android Studio.png",price:"Free"}
   ];
-//start data  
+//end data  
 });
 </script>
     </body>
