--- a/account.html
+++ b/account.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="body" id="user">
-            <div class="part">
+            <div class="part" id="gen">
                 <h1>General Setting</h1>
                 <h2>User account</h2>
                 <div class="form-container">
